# ChangeLog for dev-lang/parrot
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.59 2012/10/05 04:45:27 patrick Exp $

*parrot-4.8.0 (05 Oct 2012)

  05 Oct 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.8.0.ebuild:
  Bump

  20 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

*parrot-4.7.0 (23 Aug 2012)

  23 Aug 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.7.0.ebuild:
  Bump

*parrot-4.6.0 (19 Jul 2012)

  19 Jul 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.6.0.ebuild,
  -parrot-4.0.0.ebuild, -parrot-4.1.0.ebuild, -parrot-4.2.0.ebuild,
  -parrot-4.3.0.ebuild:
  Bump, clean up old

*parrot-4.5.0 (20 Jun 2012)

  20 Jun 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.5.0.ebuild:
  Bump

*parrot-4.4.0 (18 May 2012)

  18 May 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.4.0.ebuild:
  Bump

*parrot-4.3.0 (20 Apr 2012)

  20 Apr 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.3.0.ebuild:
  Bump

*parrot-4.2.0 (21 Mar 2012)

  21 Mar 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.2.0.ebuild:
  Bump

*parrot-4.1.0 (08 Mar 2012)

  08 Mar 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.1.0.ebuild,
  -parrot-2.11.0.ebuild, -parrot-3.11.0-r1.ebuild, -parrot-3.3.0.ebuild,
  -parrot-3.6.0.ebuild, -parrot-3.9.0.ebuild:
  Bump, remove old, partial fix for #404195

*parrot-4.0.0 (16 Feb 2012)

  16 Feb 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.0.0.ebuild:
  Bump

*parrot-3.11.0-r1 (27 Dec 2011)

  27 Dec 2011; Patrick Lauer <patrick@gentoo.org> +parrot-3.11.0-r1.ebuild,
  -parrot-3.11.0.ebuild:
  REQUIRED_USE fix for #377389, eapi4

*parrot-3.11.0 (27 Dec 2011)

  27 Dec 2011; Patrick Lauer <patrick@gentoo.org> +parrot-3.11.0.ebuild:
  Bump

*parrot-3.9.0 (22 Oct 2011)

  22 Oct 2011; Patrick Lauer <patrick@gentoo.org> +parrot-3.9.0.ebuild:
  Bump
