@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/parrot
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.59 2012/10/05 04:45:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.60 2012/10/30 04:04:49 patrick Exp $
+
+*parrot-4.9.0 (30 Oct 2012)
+
+  30 Oct 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.9.0.ebuild:
+  Bump
 
 *parrot-4.8.0 (05 Oct 2012)
 
